test/django-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: presprod  # Specify the namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: mohamedamineblibech/backend:v1.1  # Replace with your actual backend image
          command: ["gunicorn", "khedma.wsgi", "--bind", "0.0.0.0:8000"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: backend-cert-volume
              mountPath: "/etc/ssl/certs"  # Adjusted path to match expected cert path
              readOnly: true
      volumes:
        - name: backend-cert-volume
          secret:
            secretName: backend-cert-kz46d  # Reference the actual secret name

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8000
  type: LoadBalancer
