test/django-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: khedma-backend
  namespace: presprod
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: khedma-backend
