test/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-http01-ingress
  namespace: presprod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod  # Reference to the ClusterIssuer
spec:
  rules:
  - host: khedma123456.ddns.net
    http:
      paths:
      - path: /.well-known/acme-challenge/*
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
