test/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15.3-alpine
          env:
            - name: POSTGRES_DB
              value: "postgres"
            - name: POSTGRES_USER
              value: "postgres"
            - name: POSTGRES_PASSWORD
              value: "postgres"
            - name: PGDATA
              value: "/var/lib/postgresql/data/pgdata"  # Use a subdirectory
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data  # Main mount path
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc  # Ensure this matches your PVC name
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
