test/postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: presprod
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
